adding the header and main image

--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A to do list app to organize your taska.">
     <meta name = 'keywords' content=" to do,list,tasks,organizing"
-    <!-- Stylesheet-->
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/2408548ad3.js" crossorigin="anonymous"></script>
+    <!-- Stylesheet -->
     <link rel="stylesheet" href ='assets/css/style.css'>
     <title>TO DO LIST</title>
 </head>
 <body>
-    
+    <h1 id = 'main-title'>What To Do</h1>
+    <div class = 'box'>
+        <header>
+            <img src = "assets/images/check-mark.png" alt ='check mark'>
+            <h1 id = 'current-date'></h1>
+        </header>
+        
+    </div>
     <script src = 'assets/js/script.js'> </script>
 </body>
 </html>
