--- a/index.html
+++ b/index.html
@@ -19,7 +19,26 @@
             <img src = "assets/images/check-mark.png" alt ='check mark'>
             <h1 id = 'current-date'></h1>
         </header>
-        
+        <form>
+            <input type="text" class = 'todo-input'/>
+            <button class ='todo-button' type="submit">
+                <i class="fa-regular fa-square-plus"></i>
+            </button>
+            <div class = "select">
+                <select name = "todos" class = "filter-todo">
+                    <option value = "all">All</option>
+                    <option value = "completed">Completed</option>
+                    <option value = "uncompleted">Uncompleted</option>
+                </select>
+            </div>
+            <form>
+                <div class="todo-container">
+                    <ul class = "todo-list"></ul>
+                </div>
+            </form>
+
+        </form>
+
     </div>
     <script src = 'assets/js/script.js'> </script>
 </body>
