added style to input element and header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>TO DO LIST</title>
 </head>
 <body>
-    <h1 id = 'main-title'>What To Do</h1>
+    <h1 id = 'main-title'>Let's Do It Today <i class="fa-solid fa-face-smile-wink"></i></h1>
     <div class = 'box'>
         <header>
             <img src = "assets/images/check-mark.png" alt ='check mark'>
