--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A to do list app to organize your taska.">
-    <meta name = 'keywords' content=" to do,list,tasks,organizing"
-    <!-- font awesome -->
+    <meta name='keywords' content=" to do,list,tasks,organizing" <!-- font awesome -->
     <script src="https://kit.fontawesome.com/2408548ad3.js" crossorigin="anonymous"></script>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href ='assets/css/style.css'>
+    <link rel="stylesheet" href='assets/css/style.css'>
     <title>TO DO LIST</title>
 </head>
+
 <body>
-    <h1 id = 'main-title'>Let's Do It Today <i class="fa-solid fa-face-smile-wink"></i></h1>
-    <div class = 'box'>
+    <h1 id='main-title'>Let's Do It Today <i class="fa-solid fa-face-smile-wink"></i></h1>
+    <div class='box'>
         <header>
-            <img src = "assets/images/check-mark.png" alt ='check mark'>
-            <h1 id = 'current-date'></h1>
+            <img src="assets/images/check-mark.png" alt='check mark'>
+            <h1 id='current-date'></h1>
         </header>
         <form>
-            <input type="text" class = 'todo-input'/>
-            <button class ='todo-button' type="submit">
+            <input type="text" class='todo-input' />
+            <button class='todo-button' type="submit">
                 <i class="fa-regular fa-square-plus"></i>
             </button>
-            <div class = "select">
-                <select name = "todos" class = "filter-todo">
-                    <option value = "all">All</option>
-                    <option value = "completed">Completed</option>
-                    <option value = "uncompleted">Uncompleted</option>
+            <div class="select">
+                <select name="todos" class="filter-todo">
+                    <option value="all">All</option>
+                    <option value="completed">Completed</option>
+                    <option value="uncompleted">Uncompleted</option>
                 </select>
             </div>
         </form>
         <div class="todo-container">
-            <ul class = "todo-list"></ul>
+            <ul class="todo-list"></ul>
         </div>
 
     </div>
-    <script src = 'assets/js/script.js'> </script>
+    <script src='assets/js/script.js'> </script>
 </body>
+
 </html>
