--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
             <img src="assets/images/check-mark.png" alt='check mark'>
             <h1 id='current-date'></h1>
         </header>
-        <form>
-            <input type="text" class='todo-input' />
+        <form id ='input'>
+            <label for="input">New Task</label>
+            <input id ='input' type="text" class='todo-input' />
             <button class='todo-button' type="submit">
                 <i class="fa-regular fa-square-plus"></i>
             </button>
+        </form>
+        <form id ='select' >
             <div class="select">
                 <select name="todos" class="filter-todo">
                     <option value="all">All</option>
