added content to readme.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A to do list app to organize your taska.">
-    <meta name='keywords' content=" to do,list,tasks,organizing" <!-- font awesome -->
+    <meta name='keywords' content=" to do,list,tasks,organizing">
+     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/2408548ad3.js" crossorigin="anonymous"></script>
     <!-- Stylesheet -->
     <link rel="stylesheet" href='assets/css/style.css'>
@@ -17,9 +18,9 @@
     <div class='box'>
         <header>
             <img src="assets/images/check-mark.png" alt='check mark'>
-            <h1 id='current-date'></h1>
+            <h1 id='current-date'>Date</h1>
         </header>
-        <form id ='input'>
+        <form id ='inp'>
             <label for="input">New Task</label>
             <input id ='input' type="text" class='todo-input' />
             <button class='todo-button' type="submit">
