--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <form id ='inp'>
             <label for="input">New Task</label>
             <input id ='input' type="text" class='todo-input' />
-            <button class='todo-button' type="submit">
+            <button aria-label='add' class='todo-button' type="submit">
                 <i class="fa-regular fa-square-plus"></i>
             </button>
         </form>
